Added favicon link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel Prototype</title>
     <link rel="stylesheet" href="colors.css">
-    <link rel="stylesheet" href="https://apache.org/favicons/favicon-194x194.png">
+    <link rel="shortcut icon" href="https://apache.org/favicons/favicon-194x194.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
